feat: implement expediente search across application api and openapi
